tests/lean/typeOf.lean.expected.out
typeOf.lean:11:21: error: failed to synthesize instance
  HAdd Nat Nat Bool
typeOf.lean:12:0: error: failed to synthesize instance
  HAdd Bool Nat Nat
typeOf.lean:10:0: error: (kernel) kernel type checker does not support meta variables
typeOf.lean:20:54: error: invalid reassignment, term has type
  Bool
but is expected to have type
  Nat
typeOf.lean:29:53: error: natural number expected, value has type
  Bool
but is expected to have type
  Nat
